webnut/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: webnut
  namespace: common
spec:
  ports:
    - port: 6543
      targetPort: 6543
      name: webnut
  selector:
    app: webnut
  type: ClusterIP
